fixed scrollbar

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -19,7 +19,7 @@ body {
   color: $Primary900;
   font-family: var(--font--lato);
   --sb-track-color: #f3f3f3;
-  --sb-thumb-color: $Primary900;
+  --sb-thumb-color: #131112;
   --sb-size: 8px;
 
   scrollbar-color: var(--sb-thumb-color) var(--sb-track-color);
